package BundleDeal;

public abstract class BundleDealDecorator extends BundleDeal {
    public abstract String getDescription();
}
