package BundleDeal;

public class NewRelease extends BundleDeal {

    public NewRelease() {
        description = "New Release DVD";
    }

    public  double cost(){
        return 3.0;
    }

}
