@startuml

title __BUNDLEDEAL's Class Diagram__\n


      abstract class BundleDeal.BundleDeal {
          ~ description : String
          {abstract} + cost()
          + getDescription()
      }



      abstract class BundleDeal.BundleDealDecorator {
          {abstract} + getDescription()

}


      class BundleDeal.DrinkBundle {
          + DrinkBundle()
          + cost()
          + getDescription()
      }



      class BundleDeal.NewRelease {
          + NewRelease()
          + cost()
      }



      class BundleDeal.OldRelease {
          + OldRelease()
          + cost()
      }

  

      class BundleDeal.SnackBundle {
          + SnackBundle()
          + cost()
          + getDescription()
      }


  BundleDeal.BundleDealDecorator -up-|> BundleDeal.BundleDeal
  BundleDeal.DrinkBundle -up-|> BundleDeal.BundleDealDecorator
  BundleDeal.NewRelease -up-|> BundleDeal.BundleDeal
  BundleDeal.OldRelease -up-|> BundleDeal.BundleDeal
  BundleDeal.SnackBundle -up-|> BundleDeal.BundleDealDecorator
  BundleDeal.BundleDeal --o BundleDeal.BundleDealDecorator

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
